# swarmlet

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: implement-phase.md
docs/: algebraic-data-types.md  api.md  fp-mental-model.md  from-swarmlet-to-protelis.md  pattern-matching-explained.md  purity-and-side-effects.md  quickstart.md  recursion-vs-iteration.md  viz-usage.md
docs/tutorial/: 01-fp-mental-model.md  02-pattern-matching-explained.md  03-let-expressions-vs-variables.md  04-expression-evaluator-explained.md  05-algebraic-data-types.md  06-intent-pattern-explained.md  07-tick-as-snapshot-transformation.md  08-purity-and-side-effects.md  09-recursion-vs-iteration.md  10-from-swarmlet-to-protelis.md  11-swarmlet-and-codex-axioms.md  12-swarmlet-syntax-cheatsheet.md
specification/: SWARMLET_ISSUES.md  SWARMLET_ISSUES_PHASE10.md  SWARMLET_ISSUES_PHASE11.md  SWARMLET_VIZ_STAGE_2A_ISSUES.md  Swarmlet-SPEC.md
swarmlet/: __init__.py  __main__.py  analyzer.py  ast.py  builtins.py  cli.py  engine.py  errors.py  eval.py  lexer.py  parser.py  snapshot.py
swarmlet/examples/: ants.swl  boids.swl  broken.swl  forest_fire.swl  gray_scott.swl  wolf_sheep.swl
swarmlet/viz/: __init__.py  cli.py  loader.py  model.py  presets.py
tests/integration/: test_ants.py  test_boids.py  test_cli.py  test_determinism.py  test_forest_fire.py  test_gray_scott.py  test_wolf_sheep.py
tests/unit/: test_analyzer.py  test_ast.py  test_builtins_agent.py  test_builtins_basic.py  test_builtins_cell.py  test_builtins_registry.py  test_errors.py  (+10 more)
(+25 files in other folders)
