[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmlet"
version = "0.1.10"
description = "A small functional language for simulating cellular automata and agent-based swarms on a 2D grid"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
viz = [
    "matplotlib>=3.8",
    "imageio[ffmpeg]>=2.34",
    "pillow>=10.0",
]

[tool.setuptools.packages.find]
include = ["swarmlet*"]

[project.scripts]
swarmlet = "swarmlet.cli:main"
swarmlet-viz = "swarmlet.viz.cli:main"
